--- a/release/toc.html
+++ b/release/toc.html
@@ -45,7 +45,7 @@
 <a href="book.html#_model_relationships"><b>Model relationships</b></a><br/>
 <a href="book.html#_duplicating_business_logic_across_the_client_and_server"><b>Duplicating business logic across the client and server</b></a><br/>
 <a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
-<a href="book.html#_uploading_attachments_chapter_unstarted"><b>Uploading attachments (Chapter unstarted)</b></a><br/>
+<a href="book.html#_uploading_attachments"><b>Uploading attachments</b></a><br/>
 <h3><b>Chapter 7<br/>
 <a href="book.html#_testing">Testing</a></b></h3><br/>
 <a href="book.html#_full_stack_integration_testing_1_todo"><b>Full-stack integration testing (1 todo)</b></a><br/>
