--- a/release/models_and_collections.html
+++ b/release/models_and_collections.html
@@ -132,6 +132,7 @@ top is concerned with the User JSON representation.  It should at least delegate
 to User#as_json. Going further, the JSON presentation for consumption by
 Backbone.js should be completely extracted into the JSON API endpoint controller
 action, or even a separate presenter class.</p>
+<p>TODO: Some of this is repeated in the model_relationships section, unify.</p>
 </div>
 </div>
 <div class="section" lang="en">
@@ -677,6 +678,8 @@ the JSON representation of an individual task, and deliver this data from the
 "/tasks/:id" endpoint:</p>
 <pre class="programlisting">$ curl http://tasksapp.local:3000/tasks/78.json | ppjson
 {
+  /* some attributes left out for clarity */
+
   "id": 78,
   "user_id": 1,
   "title": "Clean up landing page",
@@ -691,22 +694,21 @@ the JSON representation of an individual task, and deliver this data from the
       "user_id": 1,
       "body": "Looks great!  I'll implement that."
     }
-  ]
+  ],
   "attachments": [
     {
       "id": "32",
-      "file_url": "https://s3.amazonaws.com/tasksapp/uploads/32/mock.png"
+      "upload_url": "https://s3.amazonaws.com/tasksapp/uploads/32/mock.png"
     }
-  ],
-  /* some attributes left out for clarity */
+  ]
 }</pre>
 <p>This approach involves additional code in both producing the JSON on the server
 side and parsing the JSON on the client side.  We’ll take this approach for the
 example application, both because it requires fewer HTTP requests and because
-it’s a more interesting example and illustrates the technique of parsing child
+it’s a more interesting example and illustrates the technique of parsing nested
 models in Backbone.js.</p>
 <p>Now that we know we’ll bootstrap the Lists and Tasks and defer the Comments and
-Associations, we know that our HTTP JSON API should support at least the
+Attachments, we know that our HTTP JSON API should support at least the
 following Rails routes:</p>
 <pre class="programlisting">resources :lists, :only =&gt; [:create, :update, :delete]
 resources :tasks, :only =&gt; [:show, :create, :update, :delete]</pre>
@@ -725,7 +727,7 @@ an API version namespace as well.</p>
 <p>Outline: For building the JSON presentation, we have a few options.  The easiest
 thing is to override Task#as_json, although this isn’t really where this
 presentation concern belongs.  Better options to construct the JSON include: in
-the controller, in a builder-like view, in a separate presentation object.
+the controller, in a builder-like view, or in a separate presentation object.
 Mention <a class="ulink" href="https://github.com/nesquena/rabl" target="_top">https://github.com/nesquena/rabl</a></p>
 </div>
 <div class="section" lang="en">
@@ -736,6 +738,15 @@ Mention <a class="ulink" href="https://github.com/nesquena/rabl" target="_top">h
 parsing fits into the fetch/new object lifecycle.  Point out inconsistencies
 (parse not invoked during reset, only fetch/set etc)
 Discuss <a class="ulink" href="https://github.com/PaulUithol/Backbone-relational" target="_top">https://github.com/PaulUithol/Backbone-relational</a></p>
+<p>TODO: If a Backbone Task doesn’t always have its associations filled (e.g. when
+rendering the TasksIndex Backbone view, whose JSON is built by bootstrapping, in
+<code class="literal">Tasks#index</code>), when you move from TasksIndex to TasksShow, you need to invoke
+task.fetch() to pull all the task attributes from <code class="literal">GET /tasks/:id</code> and populate
+the associations.  Whose concern is that?  Presumably the TaskShow view.  You
+could discuss lazily populating this by making the task associations functions
+instead of properties (compare task.attachments.each to task.attachments().each;
+in the latter, you could lazily fetch and populate, but then you run into the
+issue that fetch is async.)</p>
 </div>
 </div>
 <div class="section" lang="en">
@@ -851,7 +862,7 @@ validated.  For the user experience with the quickest response, we could observe
 changes on the email form field, updating the model’s <code class="literal">email</code> attribute whenever
 it changes, and displaying the inline error message immediately.</p>
 <p>With ErrorView able to handle either client-side or server-side error messages,
-we have a server-side guarantee of data correctness, <sup>[<a id="d0e2512" href="#ftn.d0e2512" class="footnote">1</a>]</sup> and a responsive UI that can validate the Member email presence
+we have a server-side guarantee of data correctness, <sup>[<a id="d0e2522" href="#ftn.d0e2522" class="footnote">1</a>]</sup> and a responsive UI that can validate the Member email presence
 without round-tripping to the server.</p>
 <p>The tradeoff we’ve made is that of duplication; the concern of "what constituted
 a valid Member" is written twice — in two different languages, no less.  In
@@ -1274,21 +1285,166 @@ corresponding <code class="literal">FayeSubscriber</code>.  Say, in your applica
 </div>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
-<a id="_uploading_attachments_chapter_unstarted"></a>Uploading attachments (Chapter unstarted)</h3></div></div></div>
-<p>Notes:</p>
+<a id="_uploading_attachments"></a>Uploading attachments</h3></div></div></div>
+<p>While Ruby gems such as paperclip make the API for attaching files to models
+very similar to the standard ActiveModel attribute persistence API, attaching
+files to Backbone models is not quite as straightforward.  In this section,
+we’ll take a look at the general approach for attaching files, and then examine
+the specific implementation used in the example application.</p>
+<div class="section" lang="en">
+<div class="titlepage"><div><div><h4 class="title">
+<a id="_how_to_attach_files_to_backbone_models"></a>How to attach files to Backbone models</h4></div></div></div>
 <p>If you upload to a backbone model, you can’t do it in a typical async request.
-As in, someBackboneModel.save() can’t just send a file to the server like other
-attributes. We save the attachment in a separate request, and then just swap in
-an attachment id on the model. This does mean that you can have "unclaimed"
-attachments if somebody bails before saving the parent model, but that’s not
-really an issue.</p>
-<p>Assumes XHR2 (at least FormData) so no IE, but simple impl:
-* <a class="ulink" href="https://github.com/mockenoff/HTML5-AJAX-File-Uploader" target="_top">https://github.com/mockenoff/HTML5-AJAX-File-Uploader</a>
-* <a class="ulink" href="https://developer.mozilla.org/en/XMLHttpRequest/FormData" target="_top">https://developer.mozilla.org/en/XMLHttpRequest/FormData</a></p>
+Meaning, <code class="literal">model.save()</code> can’t just send a file to the server like other
+attributes.  Instead, we save the attachment in a separate request, and then
+just swap in an attachment id on the model. This does mean that you can have
+unclaimed attachments if the end user leaves the page before saving the parent
+model, but those can be periodically cleaned out if the disk usage is an issue.</p>
+<p>When modeling this from the Rails side, you can choose to persist the file
+upload identifier (e.g. the local path or S3 URL) on one of your models
+directly, or you can break the attachment out into its own ActiveRecord model.
+It’s generally more straightforward to break the attachment out into its own
+model, because this can greatly simplify grabbing a reference to</p>
+<p>There are quite a few approaches to uploading files asynchronously, and browser
+support varies.  There are features like multiple file upload and drag-and-drop
+to consider, too.</p>
+<p>We’ll use the HTML5 File API because it’s a straightforward approach that is
+supported by modern browsers.  The API is small and the wrapper code that we
+start with:</p>
+<p><a class="ulink" href="https://github.com/mockenoff/HTML5-AJAX-File-Uploader" target="_top">https://github.com/mockenoff/HTML5-AJAX-File-Uploader</a></p>
+<p>is easy to read.  This approach requires XHR2 and FormData:</p>
+<div class="itemizedlist"><ul type="disc"><li>
+<a class="ulink" href="https://developer.mozilla.org/en/XMLHttpRequest/FormData" target="_top">https://developer.mozilla.org/en/XMLHttpRequest/FormData</a>
+</li></ul></div>
+<p>If you would like to provide fallback support for older
+browsers, using Flash or iframes, you can do so with plugins like (TODO:
+recommend plugins).</p>
+</div>
+<div class="section" lang="en">
+<div class="titlepage"><div><div><h4 class="title">
+<a id="_example_attaching_images_to_tasks"></a>Example: Attaching images to Tasks</h4></div></div></div>
+<p>In our example task management app, we’d like for the owner of a task to attach
+several images to each task.  We want uploads to happen in the task detail view,
+and for the uploads to appear in-page as soon as they are uploaded.  We don’t
+need to display uploads on the index view.</p>
+<p>First, let’s write an acceptance test to drive the functionality:</p>
+<pre class="programlisting">@javascript
+Feature: Attach a file to a task
+
+  As a user
+  I want to attach files to a task
+  So that I can include reference materials
+
+  Background:
+    Given I am signed up as "email@example.com"
+    When I sign in as "email@example.com"
+    And I go to the tasks page
+    And I create a task "Buy"
+    And I create a task "Eat"
+
+  Scenario: Attach a file to a task
+    When I attach "spec/fixtures/blueberries.jpg" to the "Buy" task
+    Then I should see "blueberries.jpg" attached to the "Buy" task
+    And I should see no attachments on the "Eat" task
+
+  Scenario: Attach multiple files to a task
+    When I attach "spec/fixtures/blueberries.jpg" to the "Buy" task
+    And I attach "spec/fixtures/strawberries.jpg" to the "Buy" task
+    Then I should see "blueberries.jpg" attached to the "Buy" task
+    And I should see "strawberries.jpg" attached to the "Buy" task</pre>
+<p>The first failures we get are from the lack of upload UI.  We’ll drop down to
+unit tests to drive this out:</p>
+<pre class="programlisting">include::../../example_app/spec/javascripts/views/task_show_spec.js</pre>
+<p>Then, we’ll add the upload form to the TaskShow view to the <code class="literal">tasks/show.jst.ejs</code>
+template, so the UI elements are in place:</p>
+<pre class="programlisting">include::../../example_app/app/assets/templates/tasks/show.jst.ejs</pre>
+<p>Once our units pass, we run the acceptance tests again. The next failure we see
+is that nothing happens upon upload.  We’ll drop down to Jasmine here to write
+unit tests for the uploading:</p>
+<pre class="programlisting">include::../../example_app/spec/javascripts/views/task_show_uploading_spec.js</pre>
+<p>TODO: Finish outline:</p>
+<div class="itemizedlist"><ul type="disc">
+<li>
+NB: You can’t overwrite input.files (a FileList instance), so you’ll have to
+provide a point of fake injection; in our case, TaskShow#uploadInput().
+</li>
+<li>
+Make it pass by adding uploader.js and adding uploader logic to TaskShow view
+</li>
+<li>
+Now we are uploading, but the server isn’t accepting/persisting
+</li>
+<li>
+<p>
+Test-drive persistence on server side:
+</p>
+<div class="itemizedlist"><ul type="circle">
+<li>
+Add paperclip gem
+</li>
+<li>
+Create Attachment model, route, controller.  Test-drive the units.
+</li>
+<li>
+NB on integration point: XHR requests from BB to Rails needs CSRF tokens, so inject
+   as uploader.prefilter, analagous to $.ajaxPrefilter <a class="ulink" href="http://api.jquery.com/extending-ajax/" target="_top">http://api.jquery.com/extending-ajax/</a>
+</li>
+</ul></div>
+</li>
+<li>
+Next, display existing attachments to the user.
+</li>
+</ul></div>
+<p>For structuring the attachments in Backbone, we want to be able to do something
+like the following:</p>
+<pre class="programlisting">&lt;% this.task.attachments.each(function(attachment) { %&gt;
+  Attached: &lt;img src="&lt;%= attachment.get('upload_url')" /&gt; %&gt;
+&lt;% }); %&gt;</pre>
+<p>So, the Task model will have attachments property that is instantiates with an
+AttachmentsCollection instance.</p>
+<div class="note" style="margin-left: 0.5in; margin-right: 0.5in;">
+<h3 class="title">Note</h3>
+<p>This is written assuming that the model_relationships.asc chapter came
+first and discusses how to structure the JSON, which is bundling the comments
+and attachments associations under the Task’s JSON representation.  It should
+introduce and discuss using Rabl, too. Depending on how in-depth that section
+is, we may need to write more here to contextualize.</p>
+</div>
+<p>We’re providing a JSON represenatation using Rabl, rooted at the Task:</p>
+<pre class="programlisting">include::../../example_app/app/views/tasks/show.json.rabl</pre>
+<p>Note that you have to have to tell Rabl to suppress the root JSON node, just
+like we suppress the root JSON node in ActiveRecord with
+<code class="literal">ActiveRecord::Base.include_root_in_json = false</code>:</p>
+<pre class="programlisting"><i class="hl-comment" style="color: silver"># config/initializers/rabl_init.rb</i>
+Rabl.configure <b class="hl-keyword">do</b> |config|
+  config.include_json_root = <b class="hl-keyword">false</b>
+<b class="hl-keyword">end</b></pre>
+<p>We can test drive the attachment display from Jasmine, see task_show_spec.js:</p>
+<pre class="programlisting">include::../../example_app/spec/javascripts/views/task_show_with_attachments_spec.js</pre>
+<p>This depends on parsing the JSON from the client side, so test drive that for
+the ExampleApp.Models.Tasks Jasmine spec:</p>
+<div class="itemizedlist"><ul type="disc">
+<li>
+Include spec/javascripts/models/task_spec.js
+</li>
+<li>
+Implement in task.js
+</li>
+<li>
+TDD Attachments collection and Attachment model
+</li>
+<li>
+Implement Attachments collection and Attachment model
+</li>
+<li>
+Green?
+</li>
+</ul></div>
+</div>
 </div>
 <div class="footnotes">
 <br><hr width="100" align="left">
-<div class="footnote"><p><sup>[<a id="ftn.d0e2512" href="#d0e2512" class="simpara">1</a>] </sup>At least, we
+<div class="footnote"><p><sup>[<a id="ftn.d0e2522" href="#d0e2522" class="simpara">1</a>] </sup>At least, we
 have a guarantee at the application level - database integrity and the
 possibility of skew between Rails models and DB content is another discussion
 entirely.</p></div>
